2010-01-30  Zoltan Varga  <vargaz@gmail.com>

	* CustomAttributeBuilderTest.cs: Add a test for #574353.

2010-01-21 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Add tests for #572660.

2010-01-03  Zoltan Varga  <vargaz@gmail.com>

	* ILGeneratorTest.cs: Add a test for #564411.

2009-12-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Add tests for #565127.

2009-12-16  Zoltan Varga  <vargaz@gmail.com>

	* MethodBuilderTest.cs: Add a test for #565117.

2009-12-09  Jb Evain  <jbevain@novell.com>

	* ILGeneratorTest.cs: add a test for Emit(OpCode,LocalBuilder)
	when the opcode is not related to locals.

2009-10-30  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodBuilderTest.cs: Add (copy from TypeBuilderTest) test 
	cases for two DefineGenericParameters

2009-10-29  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleBuilderTest.cs: Add test cases for GetType overloads
	* TypeBuilderTest.cs: Remove NotWorking from two DefineGenericParameters test case.

2009-10-24  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeBuilderTest.cs: Validation test cases for GetConstructor

2009-09-02 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest.cs: Test for #536243.

2009-08-07 Rodrigo Kumpera  <rkumpera@novell.com>

	* DynamicMethodTest.cs: Add regression test for bug #529238.

2009-08-06 Rodrigo Kumpera  <rkumpera@novell.com>

	* MethodOnTypeBuilderInstTest.cs: Add tests for
	generic method instances over generic type instances.

2009-08-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* MethodOnTypeBuilderInstTest.cs: Really fix the test.

2009-08-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* MethodOnTypeBuilderInstTest.cs: Pointer inflation
	was fixed. Use the right assert on the test.

2009-07-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest: Test for IsDefined.

2009-07-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilderTest: Test for GetNestedType.

2009-07-29 Rodrigo Kumpera  <rkumpera@novell.com>
