@@ -1,3 +1,7 @@
+2010-02-02  Zoltan Varga  <vargaz@gmail.com>
+
+	* DynamicMethodTest.cs: Add a test for #575955.
+
 2010-01-30  Zoltan Varga  <vargaz@gmail.com>
 
 	* CustomAttributeBuilderTest.cs: Add a test for #574353.
